# crossline_collision_detector

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: approach_warning_visualizer.param.yaml  intersection_risk_analyzer.param.yaml  warning_controller.param.yaml
include/crossline_collision_detector/: intersection_risk_analyzer_node.hpp  warning_controller_node.hpp
launch/: approach_warning_visualizer.launch.xml  crossline_collision_detector.launch.xml  intersection_risk_analyzer.launch.xml  warning_controller.launch.xml
msg/: ApproachWarning.msg  ApproachWarningArray.msg  ConflictingPair.msg  ConflictingPairArray.msg  IntersectionRiskStatus.msg  WarningDeviceCommand.msg
src/: approach_warning_visualizer_node.cpp  intersection_risk_analyzer_node.cpp  warning_controller_node.cpp
