<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>crossline_collision_detector</name>
  <version>0.1.0</version>
  <description>Infrastructure-based intersection collision risk analyzer using predicted paths and lanelet map</description>

  <maintainer email="sms92213441@gmail.com">SEONGMINSEONG</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>

  <depend>autoware_auto_perception_msgs</depend>
  <depend>autoware_auto_mapping_msgs</depend>

  <depend>tier4_autoware_utils</depend>

  <depend>lanelet2_core</depend>
  <depend>lanelet2_extension</depend>
  <depend>lanelet2_routing</depend>
  <depend>lanelet2_traffic_rules</depend>

  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>opencv</depend>

  <depend>rosidl_default_runtime</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
